feat: implement tree module
