# docs/swagger.yaml
@@ -35,6 +35,9 @@ tags:
   - name: Users
     description: User-related operations
 
+  - name: Trees
+    description: Trees-related operations
+
 security:
   - bearerAuth: []
 
@@ -157,7 +160,7 @@ paths:
                             type: string
                           refreshToken:
                             type: string
- 
+
   /users/me:
     get:
       tags: [Users]
@@ -222,7 +225,6 @@ paths:
                       data:
                         $ref: '#/components/schemas/User'
 
- 
   /users:
     get:
       summary: Get all users
@@ -325,7 +327,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListResponse'
- 
+
   /users/{userId}:
     get:
       summary: Get a user by ID
@@ -427,8 +429,188 @@ paths:
                       data:
                         type: object
                         example: { deleted: true }
- 
- 
+
+  /tree:
+    get:
+      summary: Get all trees
+      tags:
+        - Trees
+      parameters:
+        - $ref: '#/components/parameters/PageParameter'
+        - $ref: '#/components/parameters/LimitParameter'
+        - in: query
+          name: title
+          schema: { type: string, minLength: 3, maxLength: 100 }
+
+      responses:
+        '200':
+          description: List of trees
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: All trees
+                  data:
+                    type: object
+                    properties:
+                      data:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Tree'
+                      metadata:
+                        $ref: '#/components/schemas/PaginationMetadata'
+
+    post:
+      summary: Create a new tree
+      tags:
+        - Trees
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - title
+              properties:
+                title:
+                  type: string
+                startingNumber:
+                  type: number
+      responses:
+        '201':
+          description: Tree created successfully
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/SuccessResponse'
+                  - type: object
+                    properties:
+                      data:
+                        $ref: '#/components/schemas/Tree'
+
+  /tree/list:
+    get:
+      summary: Get a list of trees
+      tags:
+        - Trees
+      parameters:
+        - $ref: '#/components/parameters/PageParameter'
+        - $ref: '#/components/parameters/LimitParameter'
+        - in: query
+          name: name
+          schema: { type: string, minLength: 3, maxLength: 100 }
+
+      responses:
+        '200':
+          description: List of trees
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListResponse'
+
+  /tree/{treeId}:
+    get:
+      summary: Get a tree by ID
+      tags:
+        - Trees
+      parameters:
+        - in: path
+          name: treeId
+          required: true
+          schema:
+            type: string
+          description: The ID of the tree
+      responses:
+        '200':
+          description: Tree found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Tree found
+                  data:
+                    $ref: '#/components/schemas/Tree'
+        '404':
+          description: Tree not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+    patch:
+      summary: Update a tree by ID
+      tags:
+        - Trees
+      parameters:
+        - in: path
+          name: treeId
+          required: true
+          schema:
+            type: string
+          description: The ID of the tree
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+
+      responses:
+        '200':
+          description: Tree updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Tree updated
+                  data:
+                    $ref: '#/components/schemas/Tree'
+        '404':
+          description: Tree not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+    delete:
+      tags: [Trees]
+      summary: Delete a tree
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: treeId
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Tree deleted successfully
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/SuccessResponse'
+                  - type: object
+                    properties:
+                      data:
+                        type: object
+                        example: { deleted: true }
+
 components:
   schemas:
     SuccessResponse:
@@ -542,7 +724,80 @@ components:
           type: string
           format: date-time
           example: 2022-01-01T00:00:00.000Z
- 
+
+    Tree:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: integer
+          example: 1
+        title:
+          type: string
+          format: string
+          example: My Tree
+        createdBy:
+          type: integer
+          format: integer
+          example: 1
+        createdAt:
+          type: string
+          format: date-time
+          example: 2022-01-01T00:00:00.000Z
+        updatedAt:
+          type: string
+          format: date-time
+          example: 2022-01-01T00:00:00.000Z
+        user:
+          $ref: '#/components/schemas/User'
+        nodes:
+          type: array
+          items:
+            $ref: '#/components/schemas/Node'
+
+    Node:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: integer
+          example: 1
+        treeId:
+          type: integer
+          format: integer
+          example: 1
+        parentId:
+          type: integer
+          format: integer
+          example: null
+        operation:
+          type: enunm
+          format: enum
+          example: START
+          enum: [START, END, ADD, SUBTRACT, MULTIPLY, DIVIDE]
+        rightOperand:
+          type: integer
+          format: integer
+          example: 2
+        value:
+          type: integer
+          format: integer
+          example: 4
+        createdAt:
+          type: string
+          format: date-time
+          example: 2022-01-01T00:00:00.000Z
+        updatedAt:
+          type: string
+          format: date-time
+          example: 2022-01-01T00:00:00.000Z
+        createdBy:
+          type: integer
+          format: integer
+          example: 1
+        user:
+          $ref: '#/components/schemas/User'
+
   securitySchemes:
     bearerAuth:
       type: http
