# src/app.ts
@@ -12,6 +12,7 @@ import errorHandlerMiddleware from '@/middleware/error-handler.middleware';
 import authRoutes from '@/modules/auth/auth.route';
 import systemRoutes from '@/modules/system/system.route';
 import userRoutes from '@/modules/user/user.route';
+import treeRoutes from '@/modules/tree/tree.route';
 import { ForbiddenError, NotFoundError } from '@/utils/errors.utils';
 import { logServerInfo } from '@/utils/system-info-logs';
 
@@ -62,9 +63,10 @@ app.use(express.json({ limit: '30mb' }));
 app.set('query parser', (str: string) => qs.parse(str));
 
 // Routes
-app.use('/', systemRoutes);
+app.use('/api/', systemRoutes);
 app.use('/api/users', userRoutes);
 app.use('/api/auth', authRoutes);
+app.use('/api/tree', treeRoutes);
 
 // 404 Handler
 app.use((req, _res, next) => {
